# snake_bevy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: main.rs
src/food/: mod.rs
src/game/: components.rs  constants.rs  events.rs  mod.rs  resources.rs  sets.rs
src/rendering/: mod.rs
src/snake/: mod.rs
src/ui/: mod.rs
web/: index.html
