[package]
name = "snake_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_prototype_lyon = "0.15"
rand = "0.9.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
debug = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
